# autoconfig

./: 1und1.de  README  README.md  a1.net  active24.com  aim.com  aol.com  att.net  azm.janis.or.jp  bell.net  bigpond.com  bluemail.ch  bluewin.ch  blueyonder.co.uk  btinternet.com  bu.iij4u.or.jp  cc9.ne.jp  cek.ne.jp  ckm.janis.or.jp  clio.ne.jp  cloudnine-net.jp  clustermail.de  comcast.net  cty-net.ne.jp  df.eu  dhk.janis.or.jp  dia.janis.or.jp  earthlink.net  elpasotel.net  emailsrvr.com  francetelecom.fr  free.fr  freenet.de  gigahost.dk  gmail.com  gmail.com pop  gmx.com  gmx.de  gmx.de imap  gmx.de pop  (+108 more)
.github/: CODEOWNERS
docs/: Gemfile  client-support.md  index.md
ispdb/: 1und1.de.xml  alice.it.xml  aol.com  aol.com.xml  arcor.de.xml  att.net.xml  avocat.fr.xml  bay.wind.ne.jp.xml  bell.net.xml  biglobe.ne.jp  bigpond.com.xml  bluewin.ch.xml  blueyonder.co.uk  bol.com.br  cc9.ne.jp.xml  cchang.de.xml  cek.ne.jp.xml  centurylink.net  centurylink.net.xml  centurytel.net  centurytel.net.xml  charter.com.xml  charter.net.xml  cloudnine-net.jp  co1.wind.ne.jp.xml  co2.wind.ne.jp.xml  co3.wind.ne.jp.xml  comcast.net.xml  cox.net.xml  cty-net.ne.jp.xml  dan.wind.ne.jp.xml  daum.net.xml  df.eu  dondominio.com  earthlink.net.xml  educa.madrid.org.xml  elpasotel.net  email.it.xml  ewetel.de.xml  fastwebnet.it.xml  (+126 more)
tools/: calculate_generated_files_diff.py  (+4 more)
tools/validation/autoconfig_validate/: Cargo.toml
tools/validation/autoconfig_validate/resources/test_data/: valid_config.xml
tools/validation/autoconfig_validate/src/: error.rs  lib.rs  types.rs  validate.rs
(+82 files in other folders)
