[package]
name = "autoconfig_validate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
quick-xml = { version = "0.34.0", features = ["serde", "serialize"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_path_to_error = "0.1.16"
thiserror = "1.0.61"
